--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dev = [
     "black>=23.0.0",
     "flake8>=6.0.0",
     "mypy>=1.0.0",
-    "pytest>=7.0.0"
+    "pytest>=7.0.0",
+    "pyyaml>=6.0.0"
 ]
 
 [tool.setuptools]
